app/styles/_modules.scss
.logo {
    display: block;
    width: 64px;
    height: 64px;
    margin: 0 auto;
    text-indent: -99999px;
    @include svg-bg('cloud-10');
}

.topics {
    text-align: center;
    padding: 15px;
}

.topic {
    display: inline-block;
    margin: 5px;
    letter-spacing: -2px;

    &:hover {
        color: inherit;
    }
}

.error {
    .icon {
        top: 4px;
    }
}

.bg_black {
    background-color: $black;
}

.bg_green {
    background-color: $green;
}

.bg_grey {
    background-color: $grey;
}

.bg_red {
    background-color: $red;
}

